--- a/pvp/css/home_page.css
+++ b/pvp/css/home_page.css
@@ -4,6 +4,7 @@
     left: 60px;
     width: 120px;
     height: 120px;
+    font-size: 30px;
 }
 #style_window {
     position: absolute;
@@ -14,4 +15,34 @@
     background-color: orange;
     opacity: 0.6;
     display: none;
+}
+.close {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    left: 1810px;
+}
+#play_game {
+    width: 300px;
+    height: 120px;
+    font-size: 40px;
+    position: absolute;
+    top: 900px;
+    left: 1560px;
+}
+.title {
+    font-size: 200px;
+    text-align: center;
+    color: peru;
+}
+#game {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: black;
+    width: 1920px;
+    height: 1080px;
+    display: none;
+    color: white;
 }
