--- a/AirVrtualSystemPro/css/style.css
+++ b/AirVrtualSystemPro/css/style.css
@@ -3,10 +3,10 @@
     padding: 0;
     font-size: 13px;
 }
-button {
+button,input {
     background-color: white;
-    border: gray 1px solid;
     border-radius: 5px;
+    border: gray 1px solid;
 }
 #passwordPage {
     width: 1920px;
@@ -42,8 +42,8 @@ button {
     position: absolute;
     top: 520px;
     left: 1210px;
-    width: 44px;
-    height: 44px;
+    width: 43px;
+    height: 43px;
     font-size: 27px;
     border-radius: 0px 20px 20px 0px;
 }
